--- a/packages/core/src/styles/pages/resource-form.scss
+++ b/packages/core/src/styles/pages/resource-form.scss
@@ -5,7 +5,6 @@
         position: relative;
         width: 100%;
         height: calc(100vh - 56px);
-        overflow: hidden;
     }
 }
 
